240227 HTML 폴더 생성 및 내용 작성

--- a/240226_a/특정-위치-이동.html
+++ b/240226_a/특정-위치-이동.html
@@ -38,8 +38,8 @@
     <li><a href="./subPage.html">서브 페이지 바로가기</a></li>
     <!-- 내부에서의 이동. 상대경로 -->
     <li><a href="https://developer.mozilla.org/ko/" target="_blank">MDN 바로가기</a> 외부 사이트로 이동시 새창을 여는게 사용자 경험에 좋음</li>
-    <li><a href="#">이메일 보내기</a></li>
-    <li><a href="#">전화하기</a></li>
+    <li><a href="mailto:han_nah2853@naver.com">이메일 보내기</a></li>
+    <li><a href="tel:01011111111">전화하기</a></li>
   </ul>
 </nav>
 
