--- a/개인공부/240224연습.html
+++ b/개인공부/240224연습.html
@@ -67,28 +67,28 @@
     <ol>
       <li><strong>짱이네 떡볶이</strong>
         <ul>
-          <li><a href="https://map.naver.com/p/entry/place/1924128529?lng=127.0018979&lat=37.2666329&placePath=%2Fhome&entry=plt&searchType=place">짱이네 떡볶이</a> 바로가기</li>
+          <li><a href="https://map.naver.com/p/entry/place/1924128529?lng=127.0018979&lat=37.2666329&placePath=%2Fhome&entry=plt&searchType=place" target="_blank">짱이네 떡볶이</a> 바로가기</li>
         </ul>
       &#45; 생방송투데이 방영, 분식
       </li>
 
       <li><strong>니뽕내뽕 수원역점</strong>
         <ul>
-          <li><a href="https://www.nipongnaepong.co.kr/main/index.php?mi_referrer=https%3A%2F%2Fpcmap.place.naver.com%2Frestaurant%2F36988165%2Fhome%3Ffrom%3Dmap%26fromPanelNum%3D1%26timestamp%3D202402242041">니뽕내뽕</a> 바로가기</li>
+          <li><a href="https://www.nipongnaepong.co.kr/main/index.php?mi_referrer=https%3A%2F%2Fpcmap.place.naver.com%2Frestaurant%2F36988165%2Fhome%3Ffrom%3Dmap%26fromPanelNum%3D1%26timestamp%3D202402242041" target="_blank">니뽕내뽕</a> 바로가기</li>
         </ul>
         &#45; 짬뽕면으로 만든 퓨전음식점, 중식/양식
       </li>
 
       <li><strong>신림춘천집 수원역직영점</strong>
         <ul>
-          <li><a href="https://sillimsuwon1998.modoo.at/">신림춘천집</a> 바로가기</li>
+          <li><a href="https://sillimsuwon1998.modoo.at/" target="_blank">신림춘천집</a> 바로가기</li>
         </ul>
         &#45; 닭갈비 맛집, 한식
       </li>
 
       <li><strong>파앤피파스타하우스</strong>
         <ul>
-          <li><a href="https://www.instagram.com/PANPI_PASTAHOUSE/">파앤피파스타하우스</a> 바로가기</li>
+          <li><a href="https://www.instagram.com/PANPI_PASTAHOUSE/" target="_blank">파앤피파스타하우스</a> 바로가기</li>
         </ul>
         &#45; 파스타/피자/샐러드 등, 양식
       </li>
