--- a/240227 HTML/다양한폼관련태그.html
+++ b/240227 HTML/다양한폼관련태그.html
@@ -26,6 +26,12 @@
         selected="select옵션 자동 선택"
         disabled="비활성화"
      -->
+     <section>
+      <h3>type="text" / type="password"</h3>
+      사용자명 : <input type="text" name="userName" id="user_name" maxlength="10" placeholder="이름을 입력하세요"><br>
+      비밀번호 : <input type="password" name="" id="" maxlength="">
+     </section>
+     <hr>
   </form>
 </body>
 </html>
