--- a/240227 HTML/tableEx3.html
+++ b/240227 HTML/tableEx3.html
@@ -20,7 +20,7 @@
 
     <tbody>
       <tr>
-        <th rowspan="2"><img src="../images/img02.jpg" alt="식빵에 상추를 원하는 만큼 푸짐하게 덮어주세유"></th>
+        <th rowspan="2"><img src="../images/240227/img02.jpg" alt="식빵에 상추를 원하는 만큼 푸짐하게 덮어주세유"></th>
         <th>조리방법 1</th>
       </tr>
       <tr>
@@ -28,7 +28,7 @@
       </tr>
 
       <tr>
-        <th rowspan="2"><img src="../images/img03.jpg" alt="마요네즈를 듬뿍 올려유"></th>
+        <th rowspan="2"><img src="../images/240227/img03.jpg" alt="마요네즈를 듬뿍 올려유"></th>
         <th>조리방법 2</th>
       </tr>
       <tr>
@@ -36,7 +36,7 @@
       </tr>
 
       <tr>
-        <th rowspan="2"><img src="../images/img04.jpg" alt="그 위로 불고기를 싸악 올리구"></th>
+        <th rowspan="2"><img src="../images/240227/img04.jpg" alt="그 위로 불고기를 싸악 올리구"></th>
         <th>조리방법 3</th>
       </tr>
       <tr>
@@ -44,7 +44,7 @@
       </tr>
 
       <tr>
-        <th rowspan="2"><img src="../images/img05.jpg" alt="다시 식빵으로 덮으면 끝!"></th>
+        <th rowspan="2"><img src="../images/240227/img05.jpg" alt="다시 식빵으로 덮으면 끝!"></th>
         <th>조리방법 4</th>
       </tr>
       <tr>
