--- a/개인공부/240301Ex1.html
+++ b/개인공부/240301Ex1.html
@@ -10,16 +10,47 @@
   <meta property="og:description" content="배웠던 code를 이용해 만든 연습 페이지">
   <meta property="og:image" content="https://gonghanna.github.io/rootEx2/images/240301/hamster1.jpg">
   <meta property="og:url" content="https://gonghanna.github.io/rootEx2">
+
+  <style>
+    body {
+      font-family: '나눔고딕', '맑은 고딕', 돋움, sans-serif;
+      background-color: aliceblue;
+    }
+    h1 {
+      text-align: center;
+      background-color: brown;
+    }
+    p {
+      text-align: justify;
+    }
+    .h1_text {
+      text-align: center;
+      text-decoration: underline;
+    }
+    ul {
+      font-weight: bolder;
+    }
+    .spanText1 {
+      background-color: blanchedalmond;
+    }
+    .stText1 {
+      background-color: blanchedalmond;
+    }
+    #box1 {
+      background-color: brown;
+    }
+
+  </style>
 </head>
 
 <body>
   <header>
     <h1>햄스터 Hamster</h1>
-    <p>요약 : 한나씨가 정리한 햄스터 관찰 일지</p>
+    <p class="h1_text"><strong>요약</strong> : 한나씨가 정리한 햄스터 관찰 일지</p>
     <hr>
     <h2>개요</h2>
     <p>2024년 03월 01일에 제작한 html 연습 문서로 그동안 배웠던 code 및 tag를 사용해 만든 햄스터 페이지이다.</p>
-    <ul>
+    <ul class="box1">
       <li><a href="#title1">정의 바로가기</a></li>
       <li><a href="#title2">종류 바로가기</a></li>
       <li><a href="#title3">기원 바로가기</a></li>
@@ -31,7 +62,7 @@
 
   <section>
     <h2 id="title1">정의</h2>
-    <p>햄스터(영어: hamster)는 쥐목 비단털쥐과 비단털쥐아과에 속하는 종류이다. 또한 햄스터는 아기비단털쥐라고도 불린다. 실험용 또는 반려용으로 많이 기른다. 먹이는 주로 곡물을 먹으며, 곤충인 밀웜이나
+    <p><span class="spanText1">햄스터(영어: hamster)</span>는 쥐목 비단털쥐과 비단털쥐아과에 속하는 종류이다. 또한 햄스터는 아기비단털쥐라고도 불린다. 실험용 또는 반려용으로 많이 기른다. 먹이는 주로 곡물을 먹으며, 곤충인 밀웜이나
       귀뚜라미 등을 섭취하기도 한다.</p>
     <ul>
       <li><a href="https://ko.wikipedia.org/wiki/%ED%96%84%EC%8A%A4%ED%84%B0" target="_blank">위키백과</a> 바로가기</li>
@@ -43,7 +74,7 @@
       <caption>햄스터의 모습</caption>
       <thead>
         <tr>
-          <th>햄스터</th>
+          <th id="box1">햄스터</th>
         </tr>
       </thead>
 
@@ -52,7 +83,7 @@
           <th><img src="../images/240301/ex1.jpg" alt="햄스터의 모습 사진"></th>
         </tr>
         <tr>
-          <th>생물 분류</th>
+          <th id="box1">생물 분류</th>
         </tr>
         <tr>
           <td>
@@ -72,7 +103,7 @@
 
       <tfoot>
         <tr>
-          <th>속</th>
+          <th id="box1">속</th>
         </tr>
         <tr>
           <td>
@@ -92,7 +123,7 @@
     <hr>
     <h2 id="title3">기원</h2>
     <p>최초로 햄스터를 발견한 사람은 <strong>이스라엘 아로니</strong>이다. 아로니는 시리아의 한 옥수수밭에서 골든햄스터를 발견한 후 사육하였는데 이것이 햄스터의 기원이 되었다. 햄스터는 야행성
-      동물이며, 야간에 쳇바퀴를 돌리는 습성이 있다. 햄스터를 발견한 날짜가 1930년 4월 12일이기에 <strong>매년 4월 12일을 '햄스터의 날</strong>'로 지정하기도 했다.</p>
+      동물이며, 야간에 쳇바퀴를 돌리는 습성이 있다. 햄스터를 발견한 날짜가 1930년 4월 12일이기에 <strong class="stText1">매년 4월 12일을 '햄스터의 날</strong>'로 지정하기도 했다.</p>
   </section>
   <hr>
   <section>
