--- a/240307 CSS/블록요소중앙정렬.html
+++ b/240307 CSS/블록요소중앙정렬.html
@@ -37,7 +37,7 @@
       margin: 20px auto;
       margin: auto; /* 가로 중앙 정렬만. 세로 중앙 정렬 x */
       margin: auto 0;
-      margin: 20px auto 0;
+      margin: 20px auto 0; /* T R+L B */
     }
     .box2 .txt {
       width: 60%;
