--- a/240312 CSS/formStyleEx.html
+++ b/240312 CSS/formStyleEx.html
@@ -5,6 +5,12 @@
   <title>formStyleEx</title>
   <!-- 외부 선언 -->
   <link rel="stylesheet" href="./formStyleEx.css">
+
+  <!-- "Noto Sans KR" 이 서체를 쓰기 위한 사전 설정 -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!-- CDN -->
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
   <!-- <style>
     /* body {
       font-weight: bold;
@@ -81,7 +87,7 @@
       <input type="text" id="userName" name="userName" required autofocus>
       <br>
       <label for="userEmail">이메일 : </label>
-      <input type="text" id="userEmail" name="userEmail" required autofocus>
+      <input type="text" id="userEmail" name="userEmail">
       <br>
 
       <button type="submit">가입</button>
