--- a/개인공부/240309Ex.html
+++ b/개인공부/240309Ex.html
@@ -58,7 +58,7 @@
       margin: auto;
       margin-bottom: 5px;
     }
-    #box1:hover, .box2 li:hover {
+    #box1 li:hover, .box2 li:hover {
       background-color: #E493B3;
     }
     a {
