--- a/240315_layout/flexEx6.html
+++ b/240315_layout/flexEx6.html
@@ -15,13 +15,12 @@
 
       display: flex;
       align-items: center;
-      justify-content: space-between;
+      /* justify-content: space-between; */
       width: 100vw;
-      height: 3rem;
+      height: 4rem;
     }
     form .container li {
-      height: 3rem;
-      /* padding: 4rem; */
+      height: 4rem;
 
       display: flex;
       justify-content: center;
@@ -30,31 +29,33 @@
     form .container li input[type=text] {
       outline: none;
       border: 1px solid #222;
-      padding: 0.3rem;
-      margin-left: 0.3rem;
+      border-right: none;
+      padding: 0.35rem;
+      margin-left: 0.5rem;
     }
     form .container li button[type=submit] {
       border: 1px solid #222;
-      margin-left: 0.3rem;
-      padding: 0.25rem;
+      /* margin-left: 0.3rem; */
+      padding: 0.27rem;
     }
     form .container li button[type=submit]:hover {
-      background-color: #124076;
+      background-color: #00224D;
       color: #fff;
+      /* border: 1px solid #222;  */
     }
     form .container .item1 {
       background-color: #00224D; color: #fff;
-      width: 13%;
+      width: 10%;
     }
     form .container .item2 { 
       display: flex;
       justify-content: flex-start;
       background-color: #FFE6E6; 
-      width: 80%;
+      width: 85%;
     }
     form .container .item3 { 
       background-color: #7F9F80; 
-      width: 7%;
+      width: 5%;
     }
     h3 {
       margin: 0;
