--- a/240327_position/positionEx7.html
+++ b/240327_position/positionEx7.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>positionEx7</title>
   <style>
+    /* 
     body {
       margin: 0 auto;
       text-transform: capitalize;
@@ -16,46 +17,80 @@
       width: 500px;
       padding: 10px 0;
       border-radius: 0 0 20px 20px;
-      /* position: sticky;
-      top: 0; */
-      position: fixed;
-      top: 0; right: 0; left: 0;
+      position: sticky;
+      top: 0;
     }
-    p {
+    article {
       margin: 0;
       background-repeat: no-repeat;
       background-size: cover;
       height: 80vh;
       background-attachment: scroll;
-    }
-    p:nth-of-type(1) { background-image: url(./images/img01.jpg); }
-    p:nth-of-type(2) { background-image: url(./images/img02.jpg); }
-    p:nth-of-type(3) { background-image: url(./images/img03.jpg); }
-    p:nth-of-type(4) { background-image: url(./images/img04.jpg); }
-    p:nth-of-type(5) { background-image: url(./images/img05.jpg); }
-    /* p {
+    } 
+    .box1 { background-image: url(./images/img01.jpg); }
+    .box2 { background-image: url(./images/img02.jpg); }
+    .box3 { background-image: url(./images/img03.jpg); }
+    .box4 { background-image: url(./images/img04.jpg); }
+    .box5 { background-image: url(./images/img05.jpg); }
+    */
+    body {
       margin: 0;
-      vertical-align: top;
-    } */
+      text-align: center;
+      text-transform: capitalize;
+    }
+    section {
+      height: 100vh;
+      background: no-repeat 50% / cover;
 
+      position: sticky;
+      top: 0;
+    }
+    section h2 {
+      margin: 0 auto;
+      background-color: #000;
+      color: #fff;
+      width: 60vw;
+      padding: 10px 0;
+      border-radius: 0 0 30px 30px;
+    }
+    .box1 { background-image: url(https://picsum.photos/seed/picsum/1200/800); }
+    .box2 { background-image: url(https://picsum.photos/id/45/1200/800); }
+    .box3 { background-image: url(https://picsum.photos/id/39/1200/800); }
+    .box4 { background-image: url(https://picsum.photos/id/26/1200/800); }
+    .box5 { background-image: url(https://picsum.photos/id/57/1200/800); }
   </style>
 </head>
   
 <body>
-  <h2>title1</h2>
-  <!-- <p><img src="./images/img01.jpg" alt="img01"></p> -->
-  <p></p>
-  <h2>title2</h2>
-  <!-- <p><img src="./images/img02.jpg" alt="img02"></p> -->
-  <p></p>
-  <h2>title3</h2>
-  <!-- <p><img src="./images/img03.jpg" alt="img03"></p> -->
-  <p></p>
-  <h2>title4</h2>
-  <!-- <p><img src="./images/img04.jpg" alt="img04"></p> -->
-  <p></p>
-  <h2>title5</h2>
-  <!-- <p><img src="./images/img05.jpg" alt="img05"></p> -->
-  <p></p>
+  <section class="box1">
+    <h2>title1</h2>
+  </section>
+  <section class="box2">
+    <h2>title2</h2>
+  </section>
+  <section class="box3">
+    <h2>title3</h2>
+  </section>
+  <section class="box4">
+    <h2>title4</h2>
+  </section>
+  <section class="box5">
+    <h2>title5</h2>
+  </section>
+  <!-- <article class="box1">
+    <h2>title1</h2>
+  </article>
+  <article class="box2">
+    <h2>title2</h2>
+  </article>
+  <article class="box3">
+    <h2>title3</h2>
+  </article>
+  <article class="box4">
+    <h2>title4</h2>
+  </article>
+  <article class="box5">
+    <h2>title5</h2>
+  </article> -->
 </body>
 </html>
